[project]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmytro Zhuk",email = "140021292+dm-zhuk@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
